--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <div id="root"></div>
   </body>
 </html>
